@@ -1,3 +1,6 @@
+2014-11-10 Bruce Dubbs <bdubbs@linuxfromscratch.org>
+   * Make /run/lock have 1777 permissions
+
 2014-07-06 Bruce Dubbs <bdubbs@linuxfromscratch.org>
    * Remove obsolete reference to /proc/sys/kernel/hotplug in udev boot script
 
